--- a/index.html
+++ b/index.html
@@ -19,9 +19,7 @@
         <h3>old iphone giveaway</h3>
         <h4 class="giveaway">giveaway ends on sunday, 24 april 2020, 8:00am</h4>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia, nihil
-          perspiciatis culpa odio necessitatibus corrupti saepe tempore ea nulla
-          laboriosam?
+            A nossa Promoção iPhone Giveaway está quase encerrando. Não perca a oportunidade de ganhar um iPhone incrível. Siga-nos nas redes sociais, compartilhe e inscreva-se para concorrer!
         </p>
         <div class="deadline">
             <!-- days -->
